--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -8,11 +8,12 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
   "dependencies": {
+    "apollo-server-express": "^3.5.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "graphql": "^15.8.0",
     "mongoose": "^6.0.14",
     "redis": "^4.0.0"
   }
