--- a/nodejs/config/config.json
+++ b/nodejs/config/config.json
@@ -7,6 +7,10 @@
     "redis": {
         "host": "172.31.223.23",
         "port": "6379"
+    },
+
+    "jwt" : {
+        "secret": "jwt___secret1834625"
     }
     
 }
