--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
     "express-session": "^1.17.2",
     "graphql": "^15.8.0",
     "mongoose": "^6.0.14",
