--- a/react/package.json
+++ b/react/package.json
@@ -9,6 +9,7 @@
     "apollo-boost": "^0.4.9",
     "axios": "^0.24.0",
     "graphql": "^16.2.0",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
